--- a/package.json
+++ b/package.json
@@ -1,22 +1,38 @@
 {
-  "name": "my-react-router",
-  "private": true,
-  "version": "0.0.0",
+  "name": "mjd-router",
+  "description": "Enrutador para React, basado en una arquitectura de carpetas",
+  "version": "1.0.3",
   "type": "module",
+  "main": "lib/router/index.js",
+  "module": "lib/router/index.js",
+  "exports": {
+    ".": {
+      "import": "lib/router/index.js",
+      "require": "lib/router/index.js"
+    },
+    "./package.json": "./package.json"
+  },
   "scripts": {
     "watch": "node ./src/router/watcher.js",
+    "write": "node ./src/router/writer.js",
+    "mjd": "npm run write && npm run watch",
     "vite": "vite",
-    "dev": "node ./src/router/watcher.js & vite",
+    "prepare": "npx swc --out-dir lib ./src/router/**.*",
+    "dev": " npm run mjd & vite",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
     "chokidar": "^3.5.3",
-    "path-to-regexp": "^6.2.1",
+    "path-to-regexp": "^6.2.1"
+  },
+  "peerDependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@swc/cli": "^0.1.62",
+    "@swc/core": "^1.3.66",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
