--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "mjd-router",
   "description": "Enrutador para React, basado en una arquitectura de carpetas",
-  "version": "1.0.3",
+  "version": "1.0.5",
   "type": "module",
   "main": "lib/router/index.js",
   "module": "lib/router/index.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/MarcosJoaquinDev/Router-MJD"
+  },
   "exports": {
     ".": {
       "import": "lib/router/index.js",
